Change List.of into Arrays.asList
List.of is new in Java 9; we're using Java 8.